# homenas

./: Cargo.toml  README.md
scripts/: simple_e2e.sh  start_many.sh
src/: file_system.rs  fuse.rs  io.rs  lib.rs  logging.rs  main.rs  utils.rs
src/chunk_store/: file_system.rs  memory.rs  mod.rs  multi.rs  ref_count.rs  striping.rs
src/commands/: mod.rs  start.rs
src/db/: memory.rs  mod.rs  multi.rs  sled.rs  typed.rs
src/db/network/: mod.rs
src/file_system/: mod.rs
src/fs/: chunk_store.rs  file_handle.rs  file_system.rs  mod.rs
src/fuse/: mod.rs  unix.rs
src/network/: cluster.rs  connections.rs  consensus.rs  consensus_tree.rs  mod.rs  openraft_storage.rs  raft.rs  transport.rs
src/object_store/: file_system.rs  memory.rs  mod.rs  multi.rs  network.rs  typed.rs
src/operating_system/: mod.rs  unix.rs
src/stores/: file_system.rs  memory.rs  mod.rs  multi.rs  network.rs
tests/: multiple_nodes.sh  simple_e2e.sh
