[package]
name = "homenas"
version = "0.1.0"
edition = "2021"
authors = ["Shelby Doolittle <shelby@shelbyd.com>"]
description = "A software NAS optimized for running at home."

[dependencies]
anyhow = "1.0.66"
async-trait = "0.1.58"
blake3 = "1.3.1"
dashmap = "5.4.0"
env_logger = "0.9.1"
erased-serde = "0.3.23"
futures = "0.3.25"
hex = "0.4.3"
libc = "0.2.137"
log = "0.4.17"
maplit = "1.0.2"
nonempty = "0.8.0"
polyfuse = "0.4.1"
rand = "0.8.5"
serde = { version = "1.0.147", features = ["derive"] }
serde_cbor = "0.11.2"
structopt = "0.3.26"
thiserror = "1.0.37"

[dependencies.tokio]
version = "1.21.2"
features = [
  "fs",
  "io-util",
  "macros",
  "net",
  "rt",
  "rt-multi-thread",
  "sync",
  "time",
]

[dev-dependencies]
lazy_static = "1.4.0"
tempfile = "3.3.0"
test-log = "0.2.11"
