[package]
name = "homenas"
version = "0.1.0"
edition = "2021"
authors = ["Shelby Doolittle <shelby@shelbyd.com>"]
description = "A software NAS optimized for running at home."

[dependencies]
anyhow = "1.0.66"
async-trait = "0.1.58"
blake3 = "1.3.1"
dashmap = "5.4.0"
directories = "4.0.1"
erased-serde = "0.3.23"
flexi_logger = { version = "0.24.1", features = ["compress"] }
futures = "0.3.25"
hex = "0.4.3"
human_bytes = "0.4.1"
libc = "0.2.137"
log = "0.4.17"
maplit = "1.0.2"
nonempty = "0.8.0"
rand = "0.8.5"
serde = { version = "1.0.147", features = ["derive"] }
serde_cbor = "0.11.2"
sled = "0.34.7"
structopt = "0.3.26"
sysinfo = "0.26.7"
thiserror = "1.0.37"
tokio-serde = "0.8.0"
tokio-serde-cbor = "0.7.0"
tokio-util = "0.7.4"
openraft = "0.7.3"
tokio-stream = "0.1.11"
tracing = { version = "0.1.37", features = ["log"] }

[dependencies.tokio]
version = "1.21.2"
features = [
  "fs",
  "io-util",
  "macros",
  "net",
  "rt",
  "rt-multi-thread",
  "sync",
  "time",
]

[dev-dependencies]
env_logger = "0.9.3"
lazy_static = "1.4.0"
serial_test = "0.9.0"
tempfile = "3.3.0"
test-log = { version = "0.2.11", features = ["trace"] }
tokio-stream = "0.1.11"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[target.'cfg(unix)'.dependencies]
polyfuse = "0.4.1"
